fix: gap under blog
Issue #23

--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -159,6 +159,7 @@ nav {
 
 .container_blog {
   grid-area: blog;
+  height: 100%;
 }
 
 .blog-content {
